made external-profile-link width + height specific instead of percentage-based, to fix rendering issue that causes icons (only on safari) to be spaced incorrectly

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -118,8 +118,8 @@ h2 {
 
 .external-profile-link {
   display: inline-block;
-  height: 100%;
-  width: 100%;
+  height: 2rem;
+  width: 2rem;
 }
 
 svg {
